xfsprogs-1.3.12 (17 October 2001)
	- implement the -f (file) option to xfs_logprint
	- rework the xlog code into libxlog for code sharing
	- xfs_repair now detects a dirty log and, without -L, will
	  no longer blindly zero it (which prevents any recovery)

xfsprogs-1.3.11 (17 October 2001)
	- tidy up some (benign) compiler warnings from libxfs
	- fixed 64-bit pointer alignment issues in xfs_check
	- fixed 64-bit pointer alignment issues in xfs_repair
	- verified these on IA64, also reported to fix sparc issues

xfsprogs-1.3.10 (12 October 2001)
	- sync with XFS kernel header changes for EAs by-handle
	- ported xfs_imap command for dumping the inode map

xfsprogs-1.3.9 (03 October 2001)
	- fix xfs_repair bug in handling a corrupt root directory
	  inode with multiple "lost+found" entries
	- fix xfs_logprint bug in scanning for log head and tail
	- ensure xfs_bmap doesn't issue XFS ioctls to non-XFS files
	- numerous man page updates

xfsprogs-1.3.8 (19 September 2001)
	- rewrote the LVM support used by mkfs.xfs to call external
	  lvdisplay program to get volume geometry (mkp@mkp.net)
	- fix bug in LVM driver wrapper where it would not have been
	  used at all, ever (since 1.3.0), due to idiot programmer
	  error (*blush*) -- also thanks to mkp for the bug fix

xfsprogs-1.3.7 (10 September 2001)
	- enable preallocation in xfs_mkfile [missed during port?]
	- fix xfs_db core dump when reporting freespace
	- allow libuuid to be linked dynamically if desired (based
	  on a patch from Colin Walters <walters@verbum.org>, helps
	  the folk working on the Debian installer for XFS)
	- licensing change for "libhandle" (was GPL, now LGPL-2.1)
	  and some related header files

xfsprogs-1.3.6 (31 August 2001)
	- make mkfs.xfs aware of geometries that might cause
	  inode numbers to exceed 32 significant bits.
	- make xfs_growfs warn if new filesystem will have
	  inode numbers that exceed 32 significant bits.
	- fix logprint bug in reporting extended attributes