@@ -1,3 +1,7 @@
+xfsprogs-current
+	- sync with recent kernel changes - this does not affect
+	  userspace (libxfs), all affected code is removed by cpp.
+
 xfsprogs-1.3.12 (17 October 2001)
 	- implement the -f (file) option to xfs_logprint
 	- rework the xlog code into libxlog for code sharing
